01-frontend/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  backend:
    serviceName: frontend
    servicePort: 80
